Removing config dependencies from transpiler

--- a/packages/se-sweet-example-repo/package.json
+++ b/packages/se-sweet-example-repo/package.json
@@ -20,5 +20,8 @@
     "github"
   ],
   "author": "Todd Tarsi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "se-builder-transpiler": "^0.1.1"
+  }
 }
