Removing dep on stepTypes

--- a/packages/se-sweet-example-repo/package.json
+++ b/packages/se-sweet-example-repo/package.json
@@ -22,6 +22,6 @@
   "author": "Todd Tarsi",
   "license": "ISC",
   "dependencies": {
-    "se-builder-transpiler": "^0.3.0"
+    "se-builder-transpiler": "0.3.0"
   }
 }
