More dependency fixes

--- a/packages/se-builder-transpiler/package.json
+++ b/packages/se-builder-transpiler/package.json
@@ -16,5 +16,8 @@
     "server"
   ],
   "author": "Todd Tarsi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^2.5.0"
+  }
 }
